<resources>
    <string name="app_name">LeanDemo</string>
    <string name="text_account">账号</string>
    <string name="text_pwd">密码</string>
    <string name="btn_sign">注册</string>
    <string name="btn_login">登录</string>
    <string name="sign_account">账号</string>
    <string name="sgin_pwd">密码</string>
    <string name="sign_sgin_and_login">注册并登录</string>
    <string name="addbtn">TODO</string>
    <string name="text_add_word">添加</string>
    <string name="add_word">TextView</string>
    <string name="add_time">TextView</string>
</resources>